# xdbf

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  dbf_doc_teser.cpp  libdbf_reader.c  libdbf_tester.c  libdbf_tester.cpp  main.cpp  utils.c  utils.h
atgo/: at_util.h  atgo_dbf_doc.cpp  atgo_dbf_doc.h  atgo_dict.h  atgo_struct.h
atx/: at_util.c  atx_struct.h
common/3rd/dbf-core/: an_string.c  dbf.h
common/3rd/libdbf/include/: dbf_doc.h
common/3rd/libdbf/include/libdbf/: dbf_doc.cpp  libdbf.h
common/3rd/libdbf/src/: dbf.c  dbf.h  dbf_endian.c  dbf_endian.h
common/base/: atgo_def.h  dbf_struct.h
common/dbf/: dbf.cpp  dbf.h  dbf_def.h  dbf_doc.cpp  dbf_doc.h  dbf_tester.cpp  def_doc.cpp  def_doc.h
common/dbf_doc/: dbf_def.h  dbf_doc.cpp  dbf_doc.h
common/lib_dbf_doc/: dbf_doc.cpp  dbf_doc.h
common/utils/: c_utils.c  c_utils.h  tool.cpp  tool.h
doc/: info.md
doc/atgo/: atgo_dts_dic.xlsx
doc/atx/: OrderAlgo_20250515.csv  各产品差异说明-ATGO&ATX2.0.xlsx
doc/dbf/: dbf_file_format.docx  info
doc/share/: OrderAlgo_20230512.dbf
share/: CancelOrderAlgo_20250514.dbf  OrderAlgo_20250514.dbf  OrderAlgo_20250515.dbf  ReportBalance_20250514.dbf  ReportBalance_20250515.dbf  ReportOrderAlgo_20250515.dbf  ReportPosition_20230510.dbf  ReportPosition_20250514.dbf  ReportPosition_20250515.dbf  SubOrderAlgo_20250515.dbf
share/samples/: AlgoOrderTobeConfirmed_20250520.dbf  OrderAlgo_20250520.dbf  ReportBalance_20250520.dbf  ReportOrderAlgo_20250520.dbf  ReportPosition_20250520.dbf  SubOrderAlgo_20250520.dbf
tester/c/: CMakeLists.txt  read_dbf.c  write_dbf.c
tester/cpp/: CMakeLists.txt  dbf_doc.cpp  dbf_doc.h  main.cpp
tester/cpp2/: CMakeLists.txt  dbf_doc.cpp  dbf_doc.h  main.cpp
tester/cwr/: dbf_reader.cpp  dbf_reader.h  dbf_writer.cpp  dbf_writer.h  main.cpp
xNotes/: main.m  test_bash.sh
xNotes.xcodeproj/: project.pbxproj
xNotes.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xNotes.xcodeproj/xcuserdata/viviwu.xcuserdatad/xcschemes/: xcschememanagement.plist
xNotes/_DOC_FILE_/: BashShell.sh  RegularExpression
xNotes/_DOC_FILE_/CSCO/: CIF系统Web一柜通标准第三方接口.xlsm  投资堂标准接口20160505A.numbers  顶点cif系统第三方接口说明.xls
xNotes/_DOC_FILE_/def/: AppBaseDef.h  TZTActionFuctionTable.h
